# capns

./: Cargo.toml  Cargo.toml.wstemplate  README.md  TEST_CATALOG.md  catalog_tests.py  version.txt
.claude/: settings.local.json
cartridge-scenarios/: Cargo.toml
cartridge-scenarios/src/: lib.rs
cartridge-scenarios/tests/: scenarios.rs
cartridge-scenarios/tests/scenarios/: test948_pdf_document_intelligence.machine  test949_pdf_thumbnail_to_image_embedding.machine  test951_text_document_intelligence.machine  test952_multi_format_document_processing.machine  test953_model_plus_dimensions.machine  test954_model_availability_plus_status.machine  test958_pdf_complete_analysis.machine  test960_two_format_full_analysis.machine  test961_model_plus_pdf_combined.machine  test962_three_cartridge_pipeline.machine  test963_txt_document_intelligence.machine  test964_rst_document_intelligence.machine  test965_log_document_intelligence.machine  test966_all_text_formats_intelligence.machine  test967_model_list_models.machine  test968_gguf_embeddings_dimensions.machine  test969_gguf_llm_model_info.machine  test971_gguf_model_info_plus_vocab.machine  test973_gguf_llm_inference_constrained.machine  test974_gguf_generate_embeddings.machine  test975_gguf_describe_image.machine  test976_pdf_thumbnail_to_gguf_vision.machine  test978_mlx_generate_text.machine  test979_mlx_describe_image.machine  test981_mlx_embeddings_dimensions.machine  test982_model_download.machine  test983_pdf_to_thumbnail_to_describe_to_embed.machine  test984_pdf_thumbnail_to_gguf_describe_fanin.machine  test985_audio_transcribe_to_embed.machine  test986_pdf_fanout_with_chain.machine  test987_multi_format_parallel_chains.machine  test988_deep_chain_with_parallel.machine  test989_five_cartridge_chain.machine  test990_all_text_formats_to_image_embeds.machine
docs/: 00-OVERVIEW.md  01-OVERVIEW.md  02-FORMAL-FOUNDATIONS.md  03-TAGGED-URN-DOMAIN.md  04-CAP-URN-STRUCTURE.md  04-PREDICATES.md  05-SPECIFICITY.md  06-CAP-URN-STRUCTURE.md  06-RANKING.md  07-DISPATCH.md  07-MACHINE-NOTATION.md  08-RANKING.md  09-MACHINE-NOTATION.md  10-VALIDATION-RULES.md  11-MEDIA-URNS.md  11-media-urns.md  12.1-ARCHITECTURE.md  12.2-FRAME-PROTOCOL.md  12.3-HANDSHAKE.md  12.4-STREAMING.md  13.1-CARTRIDGE-RUNTIME.md  13.1-PLUGIN-RUNTIME.md  13.2-INPUT-OUTPUT.md  13.3-PEER-INVOCATION.md  13.4-PROGRESS-AND-LOGGING.md  14.1-HOST-RUNTIME.md  14.2-RELAY-SWITCH.md  14.3-RELAY-TOPOLOGY.md  15.1-ORCHESTRATOR.md  15.2-EXECUTION.md  15.3-PROGRESS-MAPPING.md  15.4-PLANNER.md  16.1-CARTRIDGE-ANATOMY.md  16.2-HANDLER-PATTERNS.md  16.3-MODEL-CARTRIDGES.md  16.4-CONTENT-CARTRIDGES.md  16.5-RUST-VS-SWIFT.md  17.1-TASK-INTEGRATION.md  17.2-ERROR-HANDLING.md  17.3-MEMORY-PRESSURE-DETECTION.md  (+4 more)
examples/: debug_registry.rs  registry_usage.rs  test_registry_cap.rs  test_specific_cap.rs
src/: lib.rs
testcartridge/: Cargo.toml
testcartridge/src/: main.rs
testcartridge/tests/: integration_tests.rs
tests/: cap_arg_stream_dispatch.rs  cartridge_scenarios.rs  (+1 more)
(+185 files in other folders)
