[dependencies]
anyhow = "1.0"
async-trait = "0.1"
atty = "0.2"
ciborium = "0.2"
crossbeam-channel = "0.5"
dirs = "5.0"
dot-parser = "0.1"
glob = "0.3"
pest = "2.8"
pest_derive = "2.8"
include_dir = "0.7"
jsonschema = "0.17"
libc = "0.2"
regex = "1.0"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tracing = "0.1"
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v4"] }

[dependencies.ops]
path = "../ops"

[dependencies.reqwest]
features = ["json"]
version = "0.12"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tagged-urn]
path = "../tagged-urn-rs"

[dependencies.tokio]
features = ["full"]
version = "1.0"

[dev-dependencies]
serial_test = "3.0"
tempfile = "3.10"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package]
authors = ["https://github.com/machinefabric"]
description = "Core cap URN and definition system for MACHFAB plugins"
edition = "2021"
license = "MIT"
name = "capdag"
version = "0.406.3816"
